svg as a favicon

--- a/animated/squiggle-test.html
+++ b/animated/squiggle-test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Squiggle</title>
+    <link rel="icon" href="../circle.svg" type="image/svg+xml">
 </head>
 <body>
     <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
